# kyrkokalender

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yaml
src/kyrkokalender/: church_calendar.py  create_calendar.py  feast_formatters.py  review_calendar.py
